fixed the big gap along the bottom of the page

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .wrapper {
     position: relative;
     width: 1440px;
-    min-height: 1388px;
+    min-height: 1379px;
     margin: auto;
 }
 
